--- a/style.css
+++ b/style.css
@@ -351,3 +351,16 @@ button:disabled {
     background-color: white;
 }
 
+.prio_btn{
+    border: 1px solid black;
+    border-radius: 8px;
+    padding: 12px;
+    background-color: white;
+    cursor: pointer;
+}
+
+.prio_btn_container{
+    margin-top: 18px;
+    height: 50px;
+}
+
