--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -8,7 +8,7 @@ html {
     background-color: #f9f9f9;
 }
 
-input{
+input {
     padding-left: 8px;
 }
 
@@ -943,6 +943,15 @@ input::placeholder {
         justify-content: center;
     }
 }
+@media screen and (max-width: 930px) {
+    input {
+        height: 934px;
+    }
+
+    .overlay-content {
+        height: 700px;
+    }
+}
 
 @media (max-width: 570px) {
 
@@ -1035,6 +1044,16 @@ input::placeholder {
 }
 
 @media (max-width: 400px) {
+    .overlay-content {
+        width: 100%;
+        height: 100%;
+        margin-top: 0px;
+    }
+
+    .overlay-header {
+        border-radius: 0px;
+    }
+
     .contacts-scroll-area {
         padding: 0px;
     }
@@ -1090,6 +1109,8 @@ input::placeholder {
 
 
 @media (max-width: 350px) {
+
+
     .Feedback-design {
         padding-top: 20px;
         padding-bottom: 20px;
@@ -1124,14 +1145,6 @@ input::placeholder {
     }
 }
 
-
-@media (max-height: 900px) {
-    .overlay-content {
-        max-height: 660px;
-    }
-
-}
-
 @media (max-height: 813px) {
     .overlay {
         justify-content: flex-start;
@@ -1139,10 +1152,6 @@ input::placeholder {
 
     .overlay-header p {
         margin-top: 5px;
-    }
-
-    .overlay-content {
-        margin-top: 20px;
     }
 
     .add-overlay-button {
@@ -1172,7 +1181,7 @@ input::placeholder {
         height: 50px;
     }
 
-        .edit-overlay-button {
+    .edit-overlay-button {
         padding-top: 0px;
     }
 }
@@ -1222,12 +1231,3 @@ input::placeholder {
     }
 }
 
-@media screen and (max-width: 930px) {
-  input {
-    height: 934px;
-  }
-
-    .overlay-content {
-        max-height: 700px;
-    }
-}
